--- a/.editorconfig
+++ b/.editorconfig
@@ -17,3 +17,10 @@ indent_size = 4
 [*.json]
 indent_style = space
 indent_size = 2
+
+[*.md]
+trim_trailing_whitespace = false
+
+[test/fixtures/*]
+insert_final_newline = false
+trim_trailing_whitespace = false
