--- a/.jshintrc
+++ b/.jshintrc
@@ -2,7 +2,6 @@
     "node": true,
     "esnext": true,
     "bitwise": true,
-    "camelcase": true,
     "curly": true,
     "eqeqeq": true,
     "eqnull": true,
@@ -11,13 +10,12 @@
     "latedef": true,
     "newcap": true,
     "noarg": true,
-    "quotmark": "double",
+    "quotmark": "single",
     "regexp": true,
     "undef": true,
     "unused": true,
     "strict": true,
     "sub": true,
     "trailing": true,
-    "smarttabs": true,
-    "white": true
+    "smarttabs": true
 }
