--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-svg-sprite",
   "description": "SVG sprites & stacks galore — Gulp plugin wrapping around svg-sprite that reads in a bunch of SVG files, optimizes them and creates SVG sprites and CSS resources in various flavours",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "homepage": "https://github.com/jkphl/gulp-svg-sprite",
   "author": {
     "name": "Joschi Kuphal",
@@ -30,7 +30,7 @@
     "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "dependencies": {
-    "svg-sprite": "^1.0.0",
+    "svg-sprite": "^1.0.2",
     "through2": "^0.6.3",
     "gulp-util": "^3.0.1"
   },
@@ -44,7 +44,10 @@
     "glob": "~4.3.1",
     "svg2png": "^1.1.0",
   	"image-diff": "^1.0.1",
-  	"mkdirp": "^0.5.0"
+  	"mkdirp": "^0.5.0",
+  	"gulp": "^3.8.10",
+  	"gulp-jshint": "^1.9.0",
+  	"gulp-plumber": "^0.6.6"
   },
   "peerDependencies": {
   	"vinyl": "^0.4.6"
