--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,10 @@ language: node_js
 node_js:
   - '0.8'
   - '0.10'
+before_install:
+  - npm update -g npm
 after_script:
   - npm run coveralls
+after_failure:
+  - tar -cjf "grunt-svg-sprite_travis_${TRAVIS_BUILD_NUMBER}.tar.bz2" tmp && curl --ftp-create-dirs -T "grunt-svg-sprite_travis_${TRAVIS_BUILD_NUMBER}.tar.bz2" -u $FTP_USER:$FTP_PASSWORD "ftp://jkphl.is/${TRAVIS_REPO_SLUG}/grunt-svg-sprite_travis_${TRAVIS_BUILD_NUMBER}.tar.bz2"
+  
