--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "gulp-svg-sprite",
 	"description": "SVG sprites & stacks galore — Gulp plugin wrapping around svg-sprite that reads in a bunch of SVG files, optimizes them and creates SVG sprites and CSS resources in various flavours",
-	"version": "1.2.3",
+	"version": "1.2.4",
 	"homepage": "https://github.com/jkphl/gulp-svg-sprite",
 	"author": "Joschi Kuphal <joschi@kuphal.net> (https://jkphl.is)",
 	"repository": {
@@ -26,7 +26,8 @@
 	"dependencies": {
 		"svg-sprite": "~1.2.3",
 		"through2": "^1.1.1",
-		"gulp-util": "^3.0.5"
+		"gulp-util": "^3.0.5",
+		"vinyl": "^0.4.6"
 	},
 	"devDependencies": {
 		"mocha": "*",
@@ -42,9 +43,6 @@
 		"gulp": "^3.9.0",
 		"gulp-jshint": "^1.11.0",
 		"gulp-plumber": "^1.0.1"
-	},
-	"peerDependencies": {
-		"vinyl": "^0.4.6"
 	},
 	"keywords": [
 		"gulpplugin",
