--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,7 @@ after_script:
 after_failure:
   - tar -cjf "grunt-svg-sprite_travis_${TRAVIS_BUILD_NUMBER}.tar.bz2" tmp && curl --ftp-create-dirs -T "grunt-svg-sprite_travis_${TRAVIS_BUILD_NUMBER}.tar.bz2" -u $FTP_USER:$FTP_PASSWORD "ftp://jkphl.is/${TRAVIS_REPO_SLUG}/grunt-svg-sprite_travis_${TRAVIS_BUILD_NUMBER}.tar.bz2"
   
+matrix:
+  allow_failures:
+    - node_js: iojs
+  fast_finish: true
