--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "gulp-svg-sprite",
 	"description": "SVG sprites & stacks galore — Gulp plugin wrapping around svg-sprite that reads in a bunch of SVG files, optimizes them and creates SVG sprites and CSS resources in various flavours",
-	"version": "1.2.14",
+	"version": "1.2.15",
 	"homepage": "https://github.com/jkphl/gulp-svg-sprite",
 	"author": "Joschi Kuphal <joschi@kuphal.net> (https://jkphl.is)",
 	"repository": {
@@ -24,7 +24,7 @@
 		"CHANGELOG.md"
 	],
 	"dependencies": {
-		"svg-sprite": "~1.2.14",
+		"svg-sprite": "~1.2.15",
 		"through2": "^2.0.0",
 		"gulp-util": "^3.0.7",
 		"vinyl": "^1.1.0"
@@ -41,8 +41,9 @@
 		"image-diff": "^1.3.0",
 		"mkdirp": "^0.5.1",
 		"gulp": "^3.9.0",
-		"gulp-jshint": "^1.12.0",
-		"gulp-plumber": "^1.0.1"
+		"gulp-jshint": "^2.0.0",
+		"gulp-plumber": "^1.0.1",
+		"jshint": "^2.9.1-rc1"
 	},
 	"keywords": [
 		"gulpplugin",
