--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-svg-sprite",
   "description": "SVG sprites & stacks galore — Gulp plugin wrapping around svg-sprite that reads in a bunch of SVG files, optimizes them and creates SVG sprites and CSS resources in various flavours",
-  "version": "1.2.15",
+  "version": "1.2.16",
   "homepage": "https://github.com/jkphl/gulp-svg-sprite",
   "author": "Joschi Kuphal <joschi@kuphal.net> (https://jkphl.is)",
   "repository": {
@@ -24,7 +24,7 @@
     "CHANGELOG.md"
   ],
   "dependencies": {
-    "svg-sprite": "~1.2.15",
+    "svg-sprite": "~1.2.16",
     "through2": "^2.0.0",
     "gulp-util": "^3.0.7",
     "vinyl": "^1.1.0"
@@ -38,7 +38,7 @@
     "gulp-plumber": "^1.0.1",
     "image-diff": "^1.3.0",
     "istanbul": "*",
-    "jshint": "^2.8.0",
+    "jshint": "^2.9.1-rc1",
     "mkdirp": "^0.5.1",
     "mocha": "*",
     "mocha-lcov-reporter": "*",
