--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-svg-sprite",
   "description": "SVG sprites & stacks galore — Gulp plugin wrapping around svg-sprite that reads in a bunch of SVG files, optimizes them and creates SVG sprites and CSS resources in various flavours",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "homepage": "https://github.com/jkphl/gulp-svg-sprite",
   "author": "Joschi Kuphal <joschi@kuphal.net> (https://jkphl.is)",
   "repository": {
@@ -24,27 +24,27 @@
     "CHANGELOG.md"
   ],
   "dependencies": {
-    "svg-sprite": "~1.4.0",
-    "through2": "^2.0.3",
-    "plugin-error": "^1.0.1"
+    "plugin-error": "^1.0.1",
+    "svg-sprite": "^1.4.1",
+    "through2": "^2.0.3"
   },
   "devDependencies": {
-    "coveralls": "*",
-    "event-stream": "*",
-    "glob": "~7.1.2",
+    "coveralls": "^3.0.2",
+    "event-stream": "^4.0.0",
+    "glob": "^7.1.3",
     "gulp": "^3.9.1",
     "gulp-jshint": "^2.1.0",
     "gulp-plumber": "^1.2.0",
     "image-diff": "^2.0.0",
     "istanbul": "*",
-    "jshint": "^2.9.5",
+    "jshint": "^2.9.6",
     "mkdirp": "^0.5.1",
-    "mocha": "*",
+    "mocha": "^5.2.0",
     "mocha-lcov-reporter": "*",
     "pn": "^1.0.0",
-    "should": "~13.2.1",
-    "svg2png": "jkphl/svg2png",
-    "vinyl": "^2.1.0"
+    "should": "^13.2.3",
+    "svg2png": "github:jkphl/svg2png",
+    "vinyl": "^2.2.0"
   },
   "keywords": [
     "gulpplugin",
