Update all the things
* drop Node.js < 12 support
* updated all dependencies
* dropped unused devDependencies
* lint
* switch to GitHub Actions CI
* normalize whitespace
* ...and more

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,24 +1,21 @@
 # editorconfig.org
+# top-most EditorConfig file
 root = true
 
 [*]
-end_of_line = lf
-indent_style = tab
-indent_size = 4
 charset = utf-8
-trim_trailing_whitespace = true
-insert_final_newline = true
-
-[.htaccess]
-indent_style = space
+end_of_line = lf
 indent_size = 4
-
-[*.json]
 indent_style = space
+insert_final_newline = true
+trim_trailing_whitespace = true
+
+[{*.json,*.yml,*.yaml}]
 indent_size = 2
 
 [*.md]
 trim_trailing_whitespace = false
+indent_size = 2
 
 [test/fixtures/*]
 insert_final_newline = false
