--- a/package.json
+++ b/package.json
@@ -13,38 +13,30 @@
   },
   "license": "MIT",
   "engines": {
-    "node": ">= 6.4"
+    "node": ">=12"
   },
   "scripts": {
-    "test": "gulp && istanbul test _mocha --report html -- test/*.js --reporter spec",
-    "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
+    "lint": "xo",
+    "fix": "xo --fix",
+    "mocha": "_mocha",
+    "test": "gulp && npm run mocha"
   },
   "files": [
-    "index.js",
-    "CHANGELOG.md"
+    "index.js"
   ],
   "dependencies": {
     "plugin-error": "^1.0.1",
-    "svg-sprite": "^1.5.0",
-    "through2": "^2.0.3"
+    "svg-sprite": "^1.5.3",
+    "through2": "^4.0.2"
   },
   "devDependencies": {
-    "coveralls": "^3.0.2",
-    "event-stream": "^4.0.0",
-    "glob": "^7.1.3",
-    "gulp": "^3.9.1",
-    "gulp-jshint": "^2.1.0",
-    "gulp-plumber": "^1.2.0",
-    "image-diff": "^2.0.0",
-    "istanbul": "*",
-    "jshint": "^2.9.6",
-    "mkdirp": "^0.5.1",
-    "mocha": "^5.2.0",
-    "mocha-lcov-reporter": "*",
-    "pn": "^1.1.0",
-    "should": "^13.2.3",
-    "svg2png": "github:jkphl/svg2png",
-    "vinyl": "^2.2.0"
+    "glob": "^7.2.0",
+    "gulp": "^4.0.2",
+    "looks-same": "^7.3.0",
+    "mocha": "^9.1.2",
+    "svg2png": "^4.1.1",
+    "vinyl": "^2.2.1",
+    "xo": "^0.45.0"
   },
   "keywords": [
     "gulpplugin",
@@ -67,5 +59,53 @@
     "rwd",
     "retina",
     "mustache"
-  ]
+  ],
+  "mocha": {
+    "check-leaks": true,
+    "throw-deprecation": true,
+    "timeout": 5000,
+    "trace-deprecation": true,
+    "trace-warnings": true,
+    "use_strict": true
+  },
+  "xo": {
+    "space": 4,
+    "rules": {
+      "arrow-body-style": "off",
+      "capitalized-comments": "off",
+      "camelcase": "off",
+      "comma-dangle": [
+        "error",
+        "never"
+      ],
+      "no-negated-condition": "off",
+      "object-curly-spacing": [
+        "error",
+        "always"
+      ],
+      "operator-linebreak": [
+        "error",
+        "after"
+      ],
+      "promise/prefer-await-to-then": "off",
+      "prefer-template": "error",
+      "space-before-function-paren": [
+        "error",
+        "never"
+      ],
+      "spaced-comment": "off",
+      "unicorn/catch-error-name": "off",
+      "unicorn/filename-case": "off",
+      "unicorn/prefer-module": "off",
+      "unicorn/prevent-abbreviations": "off"
+    },
+    "overrides": [
+      {
+        "files": "test/**/*.js",
+        "envs": [
+          "mocha"
+        ]
+      }
+    ]
+  }
 }
