--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   ],
   "dependencies": {
     "plugin-error": "^1.0.1",
-    "svg-sprite": "^1.5.3",
-    "through2": "^4.0.2"
+    "svg-sprite": "^1.5.3"
   },
   "devDependencies": {
     "glob": "^7.2.0",
