--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,13 @@
 name: Tests
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+  workflow_dispatch:
 
 env:
   FORCE_COLOR: 2
@@ -13,8 +20,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: [12, 14, 16, 18]
         os: [ubuntu-latest, windows-latest]
+        node: [12, 14, 16, 18]
 
     steps:
       - name: Clone repository
@@ -36,5 +43,5 @@ jobs:
         uses: actions/upload-artifact@v3
         if: failure()
         with:
-          name: gulp-svg-sprite-ci-${{ matrix.node }}-${{ github.sha }}
+          name: gulp-svg-sprite-ci-${{ matrix.node }}-${{ matrix.os }}-${{ github.sha }}
           path: tmp/
